# py3langid_rs

./: Cargo.toml  LICENSE  README.md  convert_pkl.py  pyproject.toml
benches/: bench.py  classify.rs  en.txt  jp.txt  zh.txt
src/: lib.rs
