[package]
name = "py3langid_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance, pure Rust port of py3langid"
homepage = "https://github.com/med1844/py3langid_rs"
readme = "README.md"
exclude = ["benches/*", "convert_pkl.py", "uv.lock", "pyproject.toml"]

[dependencies]
bytemuck = "1.21.0"
lzma-rs = "0.3.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "classify"
harness = false

